--- a/style.css
+++ b/style.css
@@ -3,17 +3,37 @@
 
 :root{
     background-color: aliceblue;
+    --light-red: hsl(0, 100%, 67%);
+    --Orange-yellow: hsl(39, 100%, 56%);
+    --Green-teal: hsl(166, 100%, 37%);
+    --Cobalt-blue: hsl(234, 85%, 45%);
+
+    /* ========== Gradient =============== */
+
+    --Light-slate-blue : hsl(252, 100%, 67%);
+    --Light-royal-blue: hsl(241, 81%, 54%);
+    --Violet-blue : hsla(256, 72%, 46%, 1);
+    --Persian-blue : hsla(241, 72%, 46%, 0);
+
+    --Pale-blue: hsl(221, 100%, 96%);
+    --Light-lavender: hsl(241, 100%, 89%);
+    --Dark-gray-blue: hsl(224, 30%, 27%);
 }
 
+
+
+/* ========== Main ===========*/
+
 .container{
-    min-height: 100vh;
+    height: 350px;
     display: flex;
     justify-content: center;
-    width: 500px;
+    width: 600px;
     background-color: white;
     border-radius: 25px;
     box-shadow: 100px;
 }
+
 
 /* ======== Left Section ========== */
 
@@ -24,22 +44,89 @@
     border-radius: 25px;
     padding: 20px;
     font-family: 'Hanken Grotesk', sans-serif;
+    width: 800px;
+    color: white;
 }
 
 
 /* ======== Right Section ========== */
 
 .rightsection{
-    text-align: center;
     justify-content: center;
     padding: 20px;
     font-family: 'Hanken Grotesk', sans-serif;
+    width: 800px;
 }
 
+.right_title{
+    text-align: left;
+}
+
+
+.score_container{
+padding:10px;
+margin-top :10px;
+margin-bottom: 10px;
+height: 20px;
+}
+
+.reaction{
+    color: var(--light-red);
+    text-align: center;
+    border-radius: 5px;
+    background-color: aliceblue;
+    display: flex;
+    justify-content: center;
+}
+
+.visual{
+    color: var(--Cobalt-blue);
+    text-align: center;
+    background-color: aliceblue;
+    display: flex;
+    justify-content: center;
+}
+
+.memory{
+    color: var(--Orange-yellow);
+    text-align: center;
+    background-color: aliceblue;
+    display: flex;
+    justify-content: center;
+}
+
+.verbal{
+    color: var(--Green-teal);
+    text-align: center;
+    background-color: aliceblue;
+    display: flex;
+    justify-content: center;
+}
+
+.score{
+color: black;
+}
+
+.maxscore{
+    color:white
+}
+
+
 .button{
-    width: 100px;
-    border-radius: 10px;
-    background-color: blue;
+    width:200px;
+    border-radius: 15px;
+    background-color: var(--Dark-gray-blue);
     text-align: center;
     font-family: 'Hanken Grotesk', sans-serif;
+    height: 30px;
+    justify-content: center;
+    color: white;
+}
+
+.button_container{
+    justify-content: center;
+    margin: 10px;
+    display: flex;
+    height: 30px;
+    text-align: center;
 }
