--- a/style.css
+++ b/style.css
@@ -25,10 +25,10 @@
 /* ========== Main ===========*/
 
 .container{
-    height: 350px;
+    height: 400px;
     display: flex;
     justify-content: center;
-    width: 600px;
+    width: 550px;
     background-color: white;
     border-radius: 25px;
     box-shadow: 100px;
@@ -42,11 +42,61 @@
     justify-content: center;
     background-color:var(--Light-slate-blue);
     border-radius: 25px;
-    padding: 20px;
+    padding: 25px;
     font-family: 'Hanken Grotesk', sans-serif;
-    width: 800px;
+    width: 275px;
     color: white;
 }
+
+.lefttitle{
+    color: var(--Light-lavender);
+    font-weight: 500;
+    margin: 10px;
+}
+
+.midleft{
+    justify-content: center;
+    display: flex;
+    margin: 25px;
+}
+
+.circle_container{
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    background-image: linear-gradient(var(--Violet-blue),var(--Persian-blue));
+    display: flex;
+    justify-content: center;
+}
+.scoretext{
+    border-radius: 50%;
+    text-align: center;
+    width: 100px;
+   margin-top: 30px;
+   margin-bottom: 25px;
+}
+.scoreheader{
+    font-family: 'Hanken Grotesk', sans-serif;;
+    font-weight: 800;
+    font-size: 50px;
+}
+.scoresubtext{
+    font-family: 'Hanken Grotesk', sans-serif;;
+    font-weight: 500;
+   color: var(--Light-lavender);
+}
+
+.second_title{
+    margin-bottom: 15px;
+    font-weight: 500;
+    font-size: 20px;
+}
+.para{
+    color: var(--Light-lavender);
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 
 
 /* ======== Right Section ========== */
@@ -55,11 +105,13 @@
     justify-content: center;
     padding: 20px;
     font-family: 'Hanken Grotesk', sans-serif;
-    width: 800px;
+    width: 275px;
 }
 
 .right_title{
     text-align: left;
+    font-weight: 700;
+    margin: 10px;
 }
 
 
@@ -76,7 +128,7 @@ height: 20px;
     border-radius: 5px;
     background-color: aliceblue;
     display: flex;
-    justify-content: center;
+    
 }
 
 .visual{
@@ -84,7 +136,7 @@ height: 20px;
     text-align: center;
     background-color: aliceblue;
     display: flex;
-    justify-content: center;
+   
 }
 
 .memory{
@@ -92,7 +144,7 @@ height: 20px;
     text-align: center;
     background-color: aliceblue;
     display: flex;
-    justify-content: center;
+    
 }
 
 .verbal{
@@ -100,7 +152,6 @@ height: 20px;
     text-align: center;
     background-color: aliceblue;
     display: flex;
-    justify-content: center;
 }
 
 .score{
