--- a/style.css
+++ b/style.css
@@ -118,9 +118,8 @@
 
 .score_container{
 padding:10px;
-margin-top :10px;
-margin-bottom: 10px;
-height: 20px;
+
+height: 30px;
 }
 
 .reaction{
@@ -129,7 +128,8 @@ height: 20px;
     border-radius: 5px;
     background-color: #fff6f5;
     display: flex;
-    
+    height: 25px;
+    padding: 5px;
 }
 
 .visual{
@@ -138,6 +138,8 @@ height: 20px;
     background-color: #f3f3fd;
     display: flex;
     border-radius: 5px;
+    height: 25px;
+    padding: 5px;
 }
 
 .memory{
@@ -146,6 +148,8 @@ height: 20px;
     background-color: #fffbf2;
     display: flex;
     border-radius: 5px;
+    height: 25px;
+    padding: 5px;
 }
 
 .verbal{
@@ -154,6 +158,8 @@ height: 20px;
     background-color: #f2fbfa;
     display: flex;
     border-radius: 5px;
+    height: 25px;
+    padding: 5px;
 }
 
 .score{
@@ -168,11 +174,11 @@ color: black;
 
 .button{
     width:200px;
-    border-radius: 15px;
+    border-radius: 20px;
     background-color: var(--Dark-gray-blue);
     text-align: center;
     font-family: 'Hanken Grotesk', sans-serif;
-    height: 30px;
+    height: 35px;
     justify-content: center;
     color: white;
     display: flex;
@@ -182,7 +188,7 @@ color: black;
     justify-content: center;
     margin: 10px;
     display: flex;
-    height: 30px;
+    height: 35px;
     text-align: center;
 }
 
@@ -191,4 +197,5 @@ color: black;
     text-align: center;
     display: flex;
     align-items: center;
+    font-size: 12px;
 }
