--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
 .leftsection{
     text-align: center;
     justify-content: center;
-    background-color:var(--Light-slate-blue);
+    background-color:var(--Light-royal-blue);
     border-radius: 25px;
     padding: 20px;
     font-family: 'Hanken Grotesk', sans-serif;
